<resources>
    <string name="app_name">楼巴时刻表</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="biguiyun">句容碧桂园凤凰城</string>
    <string name="bus_stop">凤凰城交通中心</string>
    <string name="minggugong">明故宫</string>
    <string name="shengtailu">江宁胜太路地铁站</string>
    <string name="maqun">马群地铁</string>
    <string name="maigaoqiao">迈皋桥地铁站</string>
    <string name="muxuyuan">苜蓿园大街站</string>
    <string name="jingtianlu">经天路</string>
    <string name="checkin_tips">入住小贴士</string>

    <string name="checkin_tips_content">
        "尊敬的业主/住户：\n\n"

        "您好！恭喜您乔迁新居！藉此，我们对您及您的家人入住碧桂园凤凰城致以最诚挚的欢迎！\n\n"

        "入住前准备：\n\n"

        "1、业户卡办理：业户卡一户可以免费办理四张（仅限于业主的直系亲属，如：业主的父母，子女，爱人，爱人的父母），若超出四张，直系亲属需缴纳30元/张工本费办理住户卡，非直系亲属需缴纳20元/张工本费，50元/张押金办理临时住户卡。（办理需带1寸照片2张和身份证）\n\n"

        "2、燃气开通：需业主带身份证至物业服务中心前台，开具业户证明和领取华润燃气通知单，然后至华润燃气领取燃气卡号前往银行（中行，工行，建行，邮政储蓄）办理银行代扣手续，并与华润燃气公司预约时间安装燃气表；如有疑问请致电燃气公司，电话：0511-87267942\n\n"

        "3、有线电视/网络的开通：若业主开通广电有线电视，需至物业服务中心开具业户证明（注：如果开通电信或者移动等电视及网络，业主直接去各营业厅办理即可）；广电电话：0511-87186501\n\n"

        "4、装修手续的办理：①若业主家中简单装修，如吊顶，打橱柜，安装空调，贴墙纸等，需业主至物业服务中心开具单项施工单，并交纳200元垃圾清运费（单项施工单的开具需提供施工人员的身份证复印件或者原件）；②若业主家装修时间较长（超过一个月，涉及改造），需要业主和装修负责人至物业服务中心前台办理装修备案的手续，装修负责人需提供身份证原件或复印件，电工证，图纸等相关资料。所有的垃圾需堆放在地下车库指定位置。如有疑问，可致电凤凰管家处咨询。\n\n"

        "5、黄梅自来水厂电话：0511-87288052，黄梅供电所电话：0511-87382217。\n\n"

        "6、电梯规格\n"
        "凤鸣苑4幢：电梯轿厢宽1.43米，长1.5米，高2.36米，斜长2.06米，电梯门宽0.9米，高2.1米。\n"
        "凤鸣苑1-3,5-15幢：电梯轿厢宽1.24米，长1.28米，高2.36米，斜长1.76米，电梯门宽0.8米，高2.1米。\n\n"

        "物业服务中心24h服务电话：0511-87181111\n"
        "广东碧桂园物业服务股份有限公司句容分公司"
    </string>
</resources>
